samples/_failures_safe/1761537439_473c61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a90cc5a.c: In function ‘main’:
./samples/SAFE/__tmp_9a90cc5a.c:177:5: error: expected declaration or statement at end of input
  177 |     return 0;
      |     ^~~~~~
